Fixed word wrap setting in text body

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -45,6 +45,7 @@
 
 .tweet-body {
     padding: 30px;
+    word-wrap: break-word;
     font-size: 1.3rem;
     opacity: 0.65;
 }
